manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-material-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    name: rewrite
  namespace: dwk-namespace
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: project1-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 2346
      - path: /backend/(.*)
        backend:
          serviceName: backend-svc
          servicePort: 2347
